增加商品管理

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.jpa.hibernate.ddl-auto=validate
 #图片上传目录
 card.pic.path=D://pic
 card.pic.realative.path=/pic/
+commodity.pic.path=D://pic
+commodity.pic.realative.path=/pic/
 
 #阿里云短信服务
 aliyun.accessKeyId=
